--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,20 @@
     
     {% include header.html %}
     
+    <!-- include the modals -->
+    {% for city in site.data.villes_tier_1 %}
+      {% include city_modal.html %}
+    {% endfor %}
+
+    {% for city in site.data.villes_tier_2 %}
+      {% include city_modal.html %}
+    {% endfor %}
+
+    {% for city in site.data.villes_tier_3 %}
+      {% include city_modal.html %}
+    {% endfor %}
+
+    <!-- the maps -->
     <main id="content" class="main-content" role="main">
       <div class="project-tagline">{{ site.description }}</div>
       <h2 class="tier_1title">Le podium <img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"></h2>
@@ -18,110 +32,7 @@
 
       <div class="tier_1">
           {% for city in site.data.villes_tier_1 %}
-            <div class="ville">
-              <h3><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h3>
-              <div class="row">
-
-                <div class="side">
-                  <div>Loyer</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Animation</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Sécurité</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Internet</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Météo</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Transports</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Coworkings</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
-                  </div>
-                </div>
-
-              </div>
-
-            <!-- Modal button -->
-              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
-            </div>
-            <!-- Modal content -->
-            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <div id="map{{ city.rang }}" style="height:15rem; width:100%;position: inherited;"></div>
-                    <script>
-                      var mymap{{ city.rang }} = L.map('map{{ city.rang }}').setView([{{ city.longitude }}, {{ city.latitude }}], 5);
-                      L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiaHJlbW90ZWZyYW5jZSIsImEiOiJjam5qdmVoMGEwbWpiM2tzNXcwem5xZWUzIn0.EVnfakBtRnl9aQPunsM5fA', { /* set your personal MapBox Access Token */
-                        maxZoom: 20, /* zoom limit of the map */
-                        attribution: 'Données &copy; Contributeurs <a href="http://openstreetmap.org">OpenStreetMap</a> + ' +
-                          '<a href="http://mapbox.com">Mapbox</a> | ' +
-                          '<a href="https://creativecommons.org/licenses/by/2.0/"> ' +
-                          'Remote France', /* set the map's caption */
-                          id: 'mapbox.streets' /* mapbox.light / dark / streets / outdoors / satellite */
-                      }).addTo(mymap{{ city.rang }});
-                      L.marker([{{ city.longitude }}, {{ city.latitude }}]).addTo(mymap{{ city.rang }}); /* set your location's GPS Coordinates : [LAT,LON] */
-                    </script>
-
-
-                    <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
-                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" placeholder="Adresse email"/></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
-                  </div>
-                </div>
-              </div>
-            </div>
+            {% include city_card.html %}
           {% endfor %}
       </div>
 
@@ -129,201 +40,33 @@
       <p>Ces villes ont des forces indéniables. A regarder de près !</p>
       <div class="tier_2">
           {% for city in site.data.villes_tier_2 %}
-            <div class="ville">
-              <h3><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h3>
-              
-              <div class="row">
-
-                <div class="side">
-                  <div>Loyer</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Animation</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Sécurité</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Internet</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Météo</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Transports</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Coworkings</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
-                  </div>
-                </div>
-
-              </div>
-              <!-- Modal button -->
-              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
-            </div>
-            <!-- Modal content -->
-            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
-                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
-                  </div>
-                  <div class="modal-footer">
-                  </div>
-                </div>
-              </div>
-            </div>
+            {% include city_card.html %}
           {% endfor %}
       </div>
 
       <h2 class="tier_3title">Les poursuivants <img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophygrey.png" class="trophy"><img src="/assets/images/trophygrey.png" class="trophy"></h2>
       <p>Encore, toujours plus de choix ! Notre algorythme (que dis-je, notre "<b>IA</b>") nous signale également ces villes françaises.</p>
         <div class="tier_3">
-          {% for city in site.data.villes_tier_3 %}
-            <div class="ville">
-              <h3><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h3>
-              
-              <div class="row">
-
-                <div class="side">
-                  <div>Loyer</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Animation</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Sécurité</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
-                  </div>
-                </div>
-                
-                <div class="side">
-                  <div>Internet</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Météo</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Transports</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
-                  </div>
-                </div>
-
-                <div class="side">
-                  <div>Coworkings</div>
-                </div>
-                <div class="middle">
-                  <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
-                  </div>
-                </div>
-
-              </div>
-              <!-- Modal button -->
-              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
-            </div>
-            <!-- Modal content -->
-            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
-                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
-                  </div>
-                  <div class="modal-footer">
-                  </div>
-                </div>
-              </div>
-            </div>
+          {% for city in site.data.villes_tier_2 %}
+            {% include city_card.html %}
           {% endfor %}
         </div>
 
-      <footer class="site-footer">
-        {% include footer.html %}
-      </footer>
+      {% include footer.html %}
+
+    <!-- include the modals -->
+    {% for city in site.data.villes_tier_1 %}
+      {% include map_script.html %}
+    {% endfor %}
+
+    {% for city in site.data.villes_tier_2 %}
+      {% include map_script.html %}
+    {% endfor %}
+
+    {% for city in site.data.villes_tier_3 %}
+      {% include map_script.html %}
+    {% endfor %}
+
     </main>
   </body>
 </html>
