--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,9 +8,8 @@ layout: default
   <div id="postslist">
     {% for post in paginator.posts %}
       <div class="postpreview border mx-auto my-4 p-3 w-75 shadow-sm">
-        <a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
-        <small>{{ post.date | date: "%Y-%m-%d" }}</small>
-        <p>{{ post.description }} <a href="{{ post.url }}"><em>Lire la suite</em></a></p>
+        <a href="{{ post.url }}">{{ post.title }}</a> - <small>{{ post.date | date: "%Y-%m-%d" }}</small>
+        <p>{{ post.excerpt }} <a href="{{ post.url }}"><em>Lire la suite</em></a></p>
       </div>
     {% endfor %}
   </div>
